项目完成了再构建，提取出了web工程 搭建了集群管理工具zookeerper完成了soa架构，用dubbo管理服务工程，调用关系 tomcat8080为zookeeper所用 tomcat8081为web工程所用 tomcat8082为service工程所用

--- a/e-manager-web/pom.xml
+++ b/e-manager-web/pom.xml
@@ -92,8 +92,8 @@
 					<port>8081</port>
 					<path>/</path>
 					<url>http://161.117.4.2:8081/manager/text</url>
-					<server>tomcat7</server>
-					<username>tomcat</username>
+					<update>true</update>
+					<username>tomcat7_8081</username>
 					<password>xingui66</password>
 				</configuration>
 			</plugin>
